# Micro-link

./: .flake8  README.md  myproject.toml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
config/static/micro-linker/css/: style.css
config/templates/micro-linker/: base.html  register.html
links/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
links/migrations/: 0001_initial.py
links/services/: link_manager.py  pre_create_url.py  user_authorization.py
links/static/micro-linker/css/: style.css
links/templates/micro-linker/: index.html  links.html  login.html
links/templates/micro-linker/inc/: _nav.html
users/: admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  profile.html  registration.html  reset_password.html  restore.html
users/templates/users/email/: reset_password.html  verify_email.html
