[tool.poetry]
name = "micro-link"
version = "0.1.0"
description = ""
authors = ["Satan1437 <exemplles.white@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
flake8-commas = "^2.1.0"
flake8-variables-names = "^0.0.5"
mypy = "^0.971"
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
